--- a/server/package.json
+++ b/server/package.json
@@ -39,8 +39,8 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.28"
     "streamifier": "^0.1.1",
+    "swagger": "^0.0.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27"
   },
