--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "next": "16.0.7",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.2.6",
     "axios": "^1.13.2",
