--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "^19.2.0",
