--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.24.13",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
